tests/bad/print_first_not_string.ae
/// fail: First argument must be a string literal

def main() {
    print(5)
}